# NotebookLLM-to-PPTX

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  WINDOWS_SETUP.md  debug_ppstructure.py  launcher.py  pyproject.toml  requirements.txt  start.bat  start.ps1  test_extractor.py  test_gemini_call.py  test_ppstructure.py
examples/: README.md  advanced_usage.py  basic_usage.py
frontend/: README.md  jest.config.js  package.json  tailwind.config.js
frontend/__tests__/: page.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: ConversionSettings.tsx  Navigation.tsx  ProgressView.tsx  ResultsView.tsx  UploadZone.tsx
frontend/lib/: store.ts  useWebSocket.ts
frontend/tests/: UploadZone.test.tsx
server/: __init__.py  db.py  main.py  models.py  requirements.txt  tasks.py  websocket_manager.py
server/tests/: test_models.py
sliderefactor/: __init__.py  cli.py  models.py  pipeline.py
sliderefactor/audit/: __init__.py  html_generator.py
sliderefactor/extractors/: __init__.py  base.py  datalab.py  paddleocr_extractor.py  pymupdf_enricher.py
sliderefactor/preprocessors/: __init__.py  opencv_utils.py
sliderefactor/prompt/: __init__.py  block_to_element.py
sliderefactor/renderers/: __init__.py  pptx_renderer.py
tests/: __init__.py  test_models.py
